--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                 <input type="submit" value="Submit">
             </form>
 
+
+            <mi-componente></mi-componente>
         </div>
 
         <script type="module" src="index.js"></script>
